--- a/Whatsappludogrouplink.html
+++ b/Whatsappludogrouplink.html
@@ -1,116 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WhatsApp Ludo Group Links | Join Active Groups Now</title>
-  <meta name="description" content="Explore the most active WhatsApp Ludo group links including Yalla Ludo, Ludo Star, Telugu, Titan, betting groups, and more. Join and play Ludo with real players." />
-  <meta name="keywords" content="whatsapp ludo group link, ludo whatsapp group, yalla ludo whatsapp group link, telugu ludo group, zupee ludo group, titan ludo whatsapp group, coin seller whatsapp group" />
-  <link rel="canonical" href="https://ludogrouplink.com/Whatsappludogrouplink" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WhatsApp Ludo Group Links | Active & Live Groups</title>
+    <meta name="description" content="Find the best and most active WhatsApp Ludo group links including Yalla Ludo, Ludo Star, betting, Telugu, Titan, and more. Join real-time Ludo WhatsApp groups now." />
+    <meta name="keywords" content="whatsapp ludo group link, yalla ludo group, zupee ludo whatsapp group, ludo king betting group, telugu ludo whatsapp group, titan ludo whatsapp, coin seller whatsapp group" />
+    <link rel="canonical" href="https://ludogrouplink.com/Whatsappludogrouplink" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        background-color: #fff;
+        color: #111;
+      }
 
-  <!-- Header (Replace with your actual header include or HTML) -->
-  <header>
-    <nav>
-      <h1>Ludo Group Link</h1>
-      <!-- Add navigation here -->
-    </nav>
-  </header>
+      header,
+      footer {
+        background-color: #f4f4f4;
+        padding: 20px;
+        text-align: center;
+      }
 
-  <main>
-    <section>
-      <h2>WhatsApp Ludo Group Links - Active & Updated</h2>
-      <p>
-        Looking to join the best <strong>WhatsApp Ludo groups</strong>? You’re at the right place! We’ve curated the most active Ludo WhatsApp groups including <strong>Yalla Ludo, Ludo Star, Zupee Ludo, Titan, Coin Seller</strong>, and many more. These groups are perfect for playing, chatting, betting, and earning with fellow Ludo lovers.
-      </p>
-    </section>
+      main {
+        padding: 20px;
+      }
 
-    <section>
-      <h3>🔥 Latest Ludo WhatsApp Groups</h3>
-      <div class="group-list">
+      h1, h2, h3 {
+        color: #222;
+      }
+
+      .group-card {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 15px;
+        margin: 10px 0;
+        background: #fdfdfd;
+      }
+
+      .group-card h4 {
+        margin: 0;
+      }
+
+      .group-card a {
+        display: inline-block;
+        margin-top: 10px;
+        background: #28a745;
+        color: #fff;
+        padding: 6px 12px;
+        text-decoration: none;
+        border-radius: 4px;
+      }
+
+      ul {
+        padding-left: 20px;
+      }
+
+      ul li {
+        margin-bottom: 6px;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <h1>WhatsApp Ludo Group Links</h1>
+      <p>Join Live Ludo Groups | Yalla | Titan | Betting | Telugu</p>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+      <section>
+        <h2>Join Active WhatsApp Ludo Groups</h2>
+        <p>
+          Welcome to the biggest collection of active <strong>WhatsApp Ludo Group Links</strong>. Whether you're looking for <strong>Yalla Ludo</strong> rooms, <strong>Ludo Star coin sellers</strong>, or <strong>betting groups</strong> — this is your one-stop destination to join Ludo fans across India and the world!
+        </p>
+      </section>
+
+      <section>
+        <h3>🔥 Featured Groups</h3>
         <div class="group-card">
-          <h4>Yalla Ludo India Group 🇮🇳</h4>
-          <a href="https://chat.whatsapp.com/xyz123">Join Now</a>
+          <h4>Yalla Ludo Tournament 🇮🇳</h4>
+          <a href="https://chat.whatsapp.com/xyz123">Join Group</a>
         </div>
         <div class="group-card">
-          <h4>Ludo Star Coin Seller 💰</h4>
-          <a href="https://chat.whatsapp.com/abc456">Join Now</a>
+          <h4>Zupee Ludo Earners 💸</h4>
+          <a href="https://chat.whatsapp.com/abc456">Join Group</a>
         </div>
         <div class="group-card">
-          <h4>Zupee Ludo League 🏆</h4>
-          <a href="https://chat.whatsapp.com/def789">Join Now</a>
+          <h4>Ludo Titan Competitive ⚔️</h4>
+          <a href="https://chat.whatsapp.com/def789">Join Group</a>
         </div>
         <div class="group-card">
-          <h4>Telugu Ludo WhatsApp Group</h4>
-          <a href="https://chat.whatsapp.com/ghi101">Join Now</a>
+          <h4>Coin Seller Group 🔄</h4>
+          <a href="https://chat.whatsapp.com/ghi000">Join Group</a>
         </div>
         <div class="group-card">
-          <h4>Ludo King Betting Group</h4>
-          <a href="https://chat.whatsapp.com/jkl112">Join Now</a>
+          <h4>Telugu Ludo Warriors 🎯</h4>
+          <a href="https://chat.whatsapp.com/jkl111">Join Group</a>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <h3>📌 Related Topics</h3>
-      <ul>
-        <li>whatsapp ludo group link</li>
-        <li>ludo whatsapp group</li>
-        <li>yalla ludo whatsapp group link</li>
-        <li>ludo star whatsapp group</li>
-        <li>telugu ludo whatsapp group link</li>
-        <li>coin seller whatsapp group</li>
-        <li>ludo titan whatsapp group</li>
-        <li>ludo king betting whatsapp group</li>
-        <li>ludo club whatsapp group</li>
-        <li>ludo group description</li>
-        <!-- Add all other keywords here if needed -->
-      </ul>
-    </section>
-  </main>
+      <section>
+        <h3>📌 Related Topics</h3>
+        <ul>
+          <li>whatsapp ludo group link</li>
+          <li>whatsapp ludo group link india</li>
+          <li>active whatsapp ludo group link</li>
+          <li>yalla ludo whatsapp group link</li>
+          <li>ludo star coin seller whatsapp group link</li>
+          <li>telugu ludo whatsapp group link</li>
+          <li>ludo titan whatsapp group link</li>
+          <li>zupee ludo whatsapp group link</li>
+          <li>ludo king betting whatsapp group link</li>
+          <li>ludo whatsapp group link 2024</li>
+        </ul>
+      </section>
+    </main>
 
-  <!-- Footer (Replace with your actual footer HTML or include) -->
-  <footer>
-    <p>© 2025 LudoGroupLink.com – All rights reserved</p>
-  </footer>
-
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
-    header, footer {
-      background: #f8f8f8;
-      padding: 1em;
-      text-align: center;
-    }
-    main {
-      padding: 2em;
-    }
-    .group-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
-    .group-card {
-      border: 1px solid #ccc;
-      padding: 1em;
-      width: 300px;
-      border-radius: 8px;
-    }
-    .group-card a {
-      display: inline-block;
-      margin-top: 0.5em;
-      padding: 0.4em 1em;
-      background-color: #28a745;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-  </style>
-
-</body>
+    <!-- Footer -->
+    <footer>
+      <p>© 2025 LudoGroupLink.com | All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
