--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
   }
   </script>
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -169,7 +167,7 @@
   <section class="hero">
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
     <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" aria-label="Join Joker Ludo WhatsApp Group Now">Join Joker Group Now</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     <br/><br/>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
@@ -192,73 +190,59 @@
       <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
+<h2>WhatsApp Ludo Group Links - Joker Ludo Special</h2>
+    <p>Join the most active <strong>Joker Ludo</strong> WhatsApp groups and play with real players across India. Below are some top trending groups you can join directly:</p>
 
+    <div class="group-card">
+      <h3>Joker Ludo Champions 🇮🇳</h3>
+      <a href="https://chat.whatsapp.com/JOKERLUDO123" target="_blank">Join Joker Ludo Group</a>
+    </div>
+    <div class="group-card">
+      <h3>Joker Ludo 24x7 Earners 💸</h3>
+      <a href="https://chat.whatsapp.com/JOKERLUDO123" target="_blank">Join Joker Ludo Group</a>
+    </div>
+    <div class="group-card">
+      <h3>Joker Ludo Titan Zone 🎯</h3>
+      <a href="https://chat.whatsapp.com/JOKERLUDO123" target="_blank">Join Joker Ludo Group</a>
+    </div>
+    <div class="group-card">
+      <h3>Joker Ludo Telugu Warriors 🚩</h3>
+      <a href="https://chat.whatsapp.com/JOKERLUDO123" target="_blank">Join Joker Ludo Group</a>
+    </div>
+
+    <section>
+      <h4>🔍 Related Topics</h4>
+      <ul>
+        <li>joker ludo whatsapp group</li>
+        <li>active whatsapp ludo group link</li>
+        <li>ludo whatsapp group link india</li>
+        <li>yalla ludo whatsapp group link</li>
+        <li>ludo king betting whatsapp group link</li>
+        <li>telugu ludo whatsapp group link</li>
+        <li>ludo star coin seller whatsapp group link</li>
+        <li>zupee ludo whatsapp group link</li>
+        <li>ludo titan whatsapp group link</li>
+        <li>online ludo whatsapp group</li>
+      </ul>
+    </section>
+  </main>
   <section class="features">
     <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
     <div class="card">
       <h3>🔥 LudoStar</h3>
       <p>Join now & win real cash in Ludo King tournaments!</p>
-      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn">Join Group</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
     </div>
     <div class="card">
       <h3>🔥 FastWin Ludo</h3>
       <p>Quick deposits & payouts. Trusted WhatsApp Ludo group.</p>
-      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
     </div>
   </section>
 
   <section class="seo-text">
     <h2>🔥 Topics Covered Related to Ludo Groups</h2>
-    <p> Ludo Group
-ludo group link
-whatsapp ludo group link
-ludo king whatsapp group link
-ludo king group link
-mk ludo group
-whatsapp ludo group
-ludo whatsapp group
-ludo group link whatsapp
-ludo king group whatsapp
-ludo
-ludo group whatsapp
-ludo game group link
-ludo betting whatsapp group link
-ludo king betting whatsapp group
-ludo king betting group
-ludo whatsapp group link
-ludo group link
-ludo group
-whatsapp ludo group link
-whatsapp ludo group
-ludo group link whatsapp
-ludo whatsapp group
-trusted ludo group link
-ludo king whatsapp group link
-trusted ludo group
-mk ludo group
-ludo whatsapp group link
-money king ludo group
-ludo king group link
-mk ludo group link
-ludo game group link
-online ludo group link
-joker ludo group
-ludo king group
-loker king ludo group ludo
-whatsapp group link
-ludo group late night
-ludo group ludo king
-ludo king group
-ludo king whatsapp group link
-ludo group link
-ludo sabse trusted group
-Best ludo group
-best ludo group link
-5% ludo group
-sachin Ludo group
-money king
-surya ludo
-moneky king ludoLudo group link, WhatsApp Ludo groups, Joker Ludo, Ludo King betting, real cash games, verified Ludo earning groups, money king ludo, online ludo WhatsApp group, trusted group link, daily ludo matches etc.</p>
+    <p>whatsapp ludo group lin, whatsapp ludo group link, whatsapp ludo group link india, active whatsapp ludo group link, yalla ludo whatsapp group link, yalla ludo id for sale whatsapp group link, ludo star coin seller whatsapp group link, telugu ludo whatsapp group link, ludo titan whatsapp group link, zupee ludo whatsapp group link, yalla ludo coin seller whatsapp group link, ludo whatsapp group link 2022, online ludo group whatsapp group link, best ludo group, money king ludo group, trusted ludo group link, and many more...</p>
   </section>
 
   <section class="features">
