--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
   <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group, ludo king whatsapp group, ludo earning whatsapp group, free ludo group link, online ludo players group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
   <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding! Ludo King group, earning groups, and daily updates." />
   <meta property="og:url" content="https://ludogrouplink.com/join.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="JokerLudo" />
-  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "JokerLudo Group",
     "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/images/logo.png",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
     "sameAs": [
       "https://www.facebook.com/JokerLudo",
       "https://www.instagram.com/JokerLudo"
     ]
   }
   </script>
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -37,33 +42,20 @@
     }
     .navbar {
       background: #2d2e52;
-      padding: 10px 20px;
+      padding: 20px;
       text-align: center;
     }
-    .logo-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
-    .logo-image {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-      border-radius: 50%;
-    }
-    .logo-text {
-      font-size: 26px;
-      font-weight: 700;
-      color: #fff;
-      text-decoration: none;
+    .logo-img {
+      width: 100px;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 10px;
     }
     .nav-links {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
-      margin-top: 10px;
     }
     .nav-links a {
       color: #fff;
@@ -142,6 +134,9 @@
     .footer-links a:hover {
       color: #ffde59;
     }
+    @media(max-width: 768px){
+      .features { flex-direction: column; }
+    }
     .seo-text {
       max-width: 800px;
       margin: 20px auto 40px auto;
@@ -151,25 +146,12 @@
       line-height: 1.6;
       text-align: center;
     }
-    .video-container {
-      display: flex;
-      justify-content: center;
-      padding: 20px;
-    }
-    video {
-      max-width: 90%;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.2);
-    }
   </style>
 </head>
 <body>
 
   <nav class="navbar">
-    <div class="logo-container">
-      <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="JokerLudo Logo" class="logo-image" />
-      <a href="index.html" class="logo-text">JokerLudo Group</a>
-    </div>
+    <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="JokerLudo Logo" class="logo-img">
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
@@ -188,16 +170,95 @@
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
 
-  <!-- 🔽 Embedded Video -->
-  <div class="video-container">
-    <video controls>
-      <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+  <!-- New Video + Group Info Section -->
+  <section class="features" style="flex-wrap: wrap; align-items: center; background: #fff;">
+    <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
+      <video width="100%" controls poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
+        <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
+      <h2 style="margin-bottom: 15px;">📢 JokerLudo Group Info</h2>
+      <ul style="line-height: 1.8; font-size: 16px;">
+        <li><strong>✅ Group Rules:</strong> No spam, fair play only, respect admins.</li>
+        <li><strong>💰 Payment Number:</strong> <span style="color: green;">9670814522 (UPI)</span></li>
+        <li><strong>⚡ 24/7 Service:</strong> Immediate response and daily matches.</li>
+        <li><strong>🎯 Trusted Groups:</strong> Verified Ludo King and FastWin communities.</li>
+        <li><strong>🏆 Earn Real Cash:</strong> Participate & withdraw instantly.</li>
+      </ul>
+      <br/>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    </div>
+  </section>
 
-  <!-- Rest of content remains same -->
-  <!-- Sections: seo-text, features, footer etc. -->
+  <section class="seo-text">
+    <p>Explore the best and verified <strong>Ludo WhatsApp group links</strong> to join active communities of Ludo players. Whether you want to join <strong>trusted Ludo King WhatsApp groups</strong>, <strong>earning Ludo groups</strong>, or <strong>online Ludo players groups</strong>, JokerLudo provides daily updated and spam-free group links. Join now and start playing to win real cash rewards instantly!</p>
+  </section>
+
+  <section class="features">
+    <div class="card">
+      <h3>✅ 24x7 Support</h3>
+      <p>Hamesha aapke sath – turant response.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Instant Withdrawals</h3>
+      <p>Har jeet par instant paisa.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Trusted Platform</h3>
+      <p>Official Deposit No: <strong>9670814522</strong></p>
+    </div>
+  </section>
+
+  <section class="features">
+    <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
+    <div class="card">
+      <h3>🔥 LudoStar</h3>
+      <p>Join now & win real cash in Ludo King tournaments!</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
+    </div>
+    <div class="card">
+      <h3>🔥 FastWin Ludo</h3>
+      <p>Quick deposits & payouts. Trusted WhatsApp Ludo group.</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
+    </div>
+  </section>
+
+  <section class="seo-text">
+    <h2>🔥 Topics Covered Related to Ludo Groups</h2>
+    <p>whatsapp ludo group lin, whatsapp ludo group link india, active whatsapp ludo group link, yalla ludo group link, coin seller whatsapp group, zupee group, money king ludo group, telugu ludo whatsapp group, best ludo group link, online ludo group, and more.</p>
+  </section>
+
+  <section class="features">
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 1</h3>
+      <p>Real cash games | Instant payment | Fair play</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 2</h3>
+      <p>Daily matches | Trusted admin | No cheating</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 3</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
