--- a/index.html
+++ b/index.html
@@ -171,6 +171,37 @@
   </section>
 
   <!-- New Video + Group Info Section -->
+<section class="features" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 40px 20px;">
+  <div style="flex: 1; min-width: 300px;">
+    <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
+      <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  <div style="flex: 1; min-width: 300px; padding: 20px;">
+    <h2>🎯 JokerLudo Group Benefits</h2>
+    <ul style="line-height: 1.6;">
+       <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
+      <h2 style="margin-bottom: 15px;">📢 JokerLudo Group Info</h2>
+      <li>✅ 100% Trusted Admin</li>
+      <li>✅ ₹50 Minimum Withdrawal</li>
+      <li>✅ Fast Payout Support</li>
+      <li>✅ Secure Ludo Matches</li>
+      <li>✅ No Cheating Policy</li>
+      <li>✅ WhatsApp Support: <strong>9670814522</strong></li>
+       <li><strong>⚡ 24/7 Service:</strong> Immediate response and daily matches.</li>
+        <li><strong>🎯 Trusted Groups:</strong> Verified Ludo King and FastWin communities.</li>
+        <li><strong>🏆 Earn Real Cash:</strong> Participate & withdraw instantly.</li>
+        <br/>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    </ul>
+  </div>
+</section>
+
+
+
+
+  
   <section class="features" style="flex-wrap: wrap; align-items: center; background: #fff;">
     <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
       <video width="100%" controls poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
@@ -178,17 +209,13 @@
         Your browser does not support the video tag.
       </video>
     </div>
-    <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
-      <h2 style="margin-bottom: 15px;">📢 JokerLudo Group Info</h2>
+   
       <ul style="line-height: 1.8; font-size: 16px;">
         <li><strong>✅ Group Rules:</strong> No spam, fair play only, respect admins.</li>
         <li><strong>💰 Payment Number:</strong> <span style="color: green;">9670814522 (UPI)</span></li>
-        <li><strong>⚡ 24/7 Service:</strong> Immediate response and daily matches.</li>
-        <li><strong>🎯 Trusted Groups:</strong> Verified Ludo King and FastWin communities.</li>
-        <li><strong>🏆 Earn Real Cash:</strong> Participate & withdraw instantly.</li>
+       
       </ul>
-      <br/>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    
     </div>
   </section>
 
