--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Best Ludo WhatsApp Group Links | JokerLudo Group</title>
-  <meta name="description" content="Join India’s most trusted and genuine Ludo earning WhatsApp groups. Daily matches, instant payout. JokerLudo Group - verified Ludo groups, Ludo King WhatsApp groups and free Ludo group links." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group, ludo king whatsapp group, ludo earning whatsapp group, free ludo group link, online ludo players group" />
+  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
-  <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding! Ludo King group, earning groups, and daily updates." />
-  <meta property="og:url" content="https://ludogrouplink.com/join.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="JokerLudo" />
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
   <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/index.html" />
+  <meta property="og:type" content="website" />
 
-  <!-- JSON-LD Structured Data -->
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema Markup -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -51,11 +56,17 @@
       border-radius: 8px;
       margin-bottom: 10px;
     }
+    .navbar h1 {
+      color: #fff;
+      font-size: 24px;
+      margin-top: 5px;
+    }
     .nav-links {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
+      margin-top: 10px;
     }
     .nav-links a {
       color: #fff;
@@ -81,8 +92,7 @@
       font-size: 18px;
       margin-bottom: 25px;
       max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto 25px auto;
       line-height: 1.5;
     }
     .join-btn {
@@ -101,8 +111,8 @@
     }
     .features {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 20px;
       padding: 40px 20px;
     }
@@ -134,24 +144,24 @@
     .footer-links a:hover {
       color: #ffde59;
     }
-    @media(max-width: 768px){
-      .features { flex-direction: column; }
-    }
     .seo-text {
       max-width: 800px;
-      margin: 20px auto 40px auto;
+      margin: 20px auto;
       padding: 0 20px;
       color: #555;
       font-size: 16px;
       line-height: 1.6;
       text-align: center;
     }
+    @media(max-width: 768px) {
+      .features { flex-direction: column; }
+    }
   </style>
 </head>
 <body>
-
   <nav class="navbar">
     <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="JokerLudo Logo" class="logo-img">
+    <h1>JokerLudo</h1>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
@@ -166,91 +176,51 @@
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
     <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
     <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
-    <br/><br/>
+    <br><br>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
 
-  <!-- New Video + Group Info Section -->
-<section class="features" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 40px 20px;">
-  <div style="flex: 1; min-width: 300px;">
-    <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
-      <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <div style="flex: 1; min-width: 300px; padding: 20px;">
-    <h2>🎯 JokerLudo Group Benefits</h2>
-    <ul style="line-height: 1.6;">
-       <div style="flex: 1; min-width: 320px; max-width: 480px; padding: 10px;">
-      <h2 style="margin-bottom: 15px;">📢 JokerLudo Group Info</h2>
-      <li>✅ 100% Trusted Admin</li>
-      <li>✅ ₹50 Minimum Withdrawal</li>
-      <li>✅ Fast Payout Support</li>
-      <li>✅ Secure Ludo Matches</li>
-      <li>✅ No Cheating Policy</li>
-      <li>✅ WhatsApp Support: <strong>9670814522</strong></li>
-       <li><strong>⚡ 24/7 Service:</strong> Immediate response and daily matches.</li>
-        <li><strong>🎯 Trusted Groups:</strong> Verified Ludo King and FastWin communities.</li>
-        <li><strong>🏆 Earn Real Cash:</strong> Participate & withdraw instantly.</li>
-        <br/>
+  <section class="features">
+    <div style="flex: 1; min-width: 300px;">
+      <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
+        <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div style="flex: 1; min-width: 300px; padding: 20px;">
+      <h2>🎯 JokerLudo Group Benefits</h2>
+      <ul style="line-height: 1.8; font-size: 16px;">
+        <li>✅ 100% Trusted Admin</li>
+        <li>✅ ₹50 Minimum Withdrawal</li>
+        <li>✅ Fast Payout Support</li>
+        <li>✅ Secure Ludo Matches</li>
+        <li>✅ No Cheating Policy</li>
+        <li>✅ WhatsApp Support: <strong>9670814522</strong></li>
+        <li>⚡ 24/7 Service: Immediate response and daily matches</li>
+        <li>🎯 Trusted Groups: Verified Ludo King and FastWin communities</li>
+        <li>🏆 Earn Real Cash: Participate & withdraw instantly</li>
+      </ul>
+      <br>
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
-    </ul>
-  </div>
-</section>
-  
+    </div>
+  </section>
+
   <section class="seo-text">
-    <p>Explore the best and verified <strong>Ludo WhatsApp group links</strong> to join active communities of Ludo players. Whether you want to join <strong>trusted Ludo King WhatsApp groups</strong>, <strong>earning Ludo groups</strong>, or <strong>online Ludo players groups</strong>, JokerLudo provides daily updated and spam-free group links. Join now and start playing to win real cash rewards instantly!</p>
+    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
   </section>
 
   <section class="features">
     <div class="card">
       <h3>✅ 24x7 Support</h3>
-      <p>Hamesha aapke sath – turant response.</p>
+      <p>Always online to help with fast responses.</p>
     </div>
     <div class="card">
       <h3>✅ Instant Withdrawals</h3>
-      <p>Har jeet par instant paisa.</p>
+      <p>Quick payout every time you win.</p>
     </div>
     <div class="card">
       <h3>✅ Trusted Platform</h3>
       <p>Official Deposit No: <strong>9670814522</strong></p>
-    </div>
-  </section>
-
-  <section class="features">
-    <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
-    <div class="card">
-      <h3>🔥 LudoStar</h3>
-      <p>Join now & win real cash in Ludo King tournaments!</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
-    </div>
-    <div class="card">
-      <h3>🔥 FastWin Ludo</h3>
-      <p>Quick deposits & payouts. Trusted WhatsApp Ludo group.</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group</a>
-    </div>
-  </section>
-
-  <section class="seo-text">
-    <h2>🔥 Topics Covered Related to Ludo Groups</h2>
-    <p>whatsapp ludo group lin, whatsapp ludo group link india, active whatsapp ludo group link, yalla ludo group link, coin seller whatsapp group, zupee group, money king ludo group, telugu ludo whatsapp group, best ludo group link, online ludo group, and more.</p>
-  </section>
-
-  <section class="features">
-    <div class="group-card">
-      <h3>💥 Joker Ludo Group 1</h3>
-      <p>Real cash games | Instant payment | Fair play</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
-    </div>
-    <div class="group-card">
-      <h3>💥 Joker Ludo Group 2</h3>
-      <p>Daily matches | Trusted admin | No cheating</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
-    </div>
-    <div class="group-card">
-      <h3>💥 Joker Ludo Group 3</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
     </div>
   </section>
 
@@ -265,6 +235,5 @@
     </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
-
 </body>
 </html>
