--- a/online-ludo-game.html
+++ b/online-ludo-game.html
@@ -203,61 +203,172 @@
     <section class="related-topics">
       <h2>Related Topics</h2>
       <div class="keywords-grid">
-        <ul>
-          <li>online ludo</li>
-          <li>mencherz online ludo</li>
-          <li>zupee online ludo</li>
-          <li>how to play online ludo with friends</li>
-          <li>free online ludo game</li>
-          <li>online ludo free</li>
-          <li>wowzy online ludo game</li>
-          <li>online ludo game and earn money</li>
-          <li>online ludo download</li>
-          <li>play online ludo king</li>
-          <li>online ludo app with friends</li>
-          <li>online ludo apk</li>
-          <li>online ludo app download</li>
-          <li>online ludo apk download</li>
-          <li>online ludo all</li>
-          <li>online ludo and chat</li>
-          <li>online ludo app cash</li>
-          <li>online ludo and earn money</li>
-          <li>online ludo rules</li>
-          <li>all online ludo game</li>
-          <li>all online ludo</li>
-          <li>aqua online ludo</li>
-          <li>online ludo earning app</li>
-          <li>online ludo app</li>
-          <li>apna ludo online</li>
-          <!-- ... add more here up to ~200 keywords -->
-        </ul>
-        <ul>
-          <li>online ludo real money</li>
-          <li>online ludo club</li>
-          <li>online ludo multiplayer</li>
-          <li>online ludo 2 player</li>
-          <li>ludo empire online</li>
-          <li>ludo master online</li>
-          <li>ludo ninja online</li>
-          <li>ludo king online</li>
-          <li>best online ludo game</li>
-          <li>earn money online ludo</li>
-          <li>play ludo online with friends</li>
-          <li>download online ludo</li>
-          <li>online ludo earning game</li>
-          <li>online ludo cash</li>
-          <li>how to win online ludo</li>
-          <li>ludo game online real money</li>
-          <li>how to earn from online ludo</li>
-          <li>online ludo pc game</li>
-          <li>best online ludo with chat</li>
-          <li>online ludo friends</li>
-          <li>yalla ludo online</li>
-          <li>winzo ludo online</li>
-          <li>gamezop online ludo</li>
-          <li>croxyproxy ludo online</li>
-          <li>ludo with voice chat online</li>
-          <!-- ... continue until all are added -->
+    <ul>
+      <li>online ludo</li>
+      <li>mencherz online ludo</li>
+      <li>zupee online ludo</li>
+      <li>how to play online ludo with friends</li>
+      <li>free online ludo game</li>
+      <li>online ludo free</li>
+      <li>wowzy online ludo game</li>
+      <li>online ludo game and earn money</li>
+      <li>online ludo download</li>
+      <li>play online ludo king</li>
+      <li>online ludo app with friends</li>
+      <li>online ludo apk</li>
+      <li>online ludo app download</li>
+      <li>online ludo apk download</li>
+      <li>online ludo all</li>
+      <li>online ludo and chat</li>
+      <li>online ludo app cash</li>
+      <li>online ludo and earn money</li>
+      <li>online ludo rules</li>
+      <li>all online ludo game</li>
+      <li>all online ludo</li>
+      <li>aqua online ludo</li>
+      <li>online ludo earning app</li>
+      <li>online ludo app</li>
+      <li>apna ludo online</li>
+      <li>ludo army online</li>
+      <li>rk adda ludo online</li>
+      <li>wowzy ludo online game apk</li>
+      <li>online ludo betting</li>
+      <li>online ludo baji</li>
+      <li>online ludo board game</li>
+      <li>online ludo baat karne wala</li>
+      <li>online ludo bonus</li>
+      <li>online ludo bonus game</li>
+      <li>online ludo bonus wala</li>
+      <li>online ludo bhejo</li>
+      <li>online ludo best app</li>
+      <li>online ludo betting bangladesh</li>
+      <li>best online ludo game</li>
+      <li>best online ludo game real money</li>
+      <li>best online ludo earning app</li>
+      <li>best online ludo game with friends</li>
+      <li>best online ludo app</li>
+      <li>board games online ludo</li>
+      <li>best online ludo game app</li>
+      <li>best online ludo game with chat</li>
+      <li>best online ludo betting app</li>
+      <li>best online ludo cash game</li>
+      <li>online ludo chakka</li>
+      <li>online ludo controller</li>
+      <li>online ludo club</li>
+      <li>online ludo cash withdrawal</li>
+      <li>online ludo cash game real money</li>
+      <li>online ludo cash withdrawal app</li>
+      <li>online ludo chat game</li>
+      <li>online ludo cash app</li>
+      <li>online ludo chat</li>
+      <li>case game online ludo</li>
+      <li>cash online ludo</li>
+      <li>croxyproxy games online ludo</li>
+      <li>can we play online ludo in islam</li>
+      <li>crazy games online ludo</li>
+      <li>can we play online ludo</li>
+      <li>ludo comfun online live game</li>
+      <li>ludo play game online downloadable content</li>
+      <li>ludo culture ludo game online</li>
+      <li>ludo classic online</li>
+      <li>online ludo dice</li>
+      <li>online ludo dice roller</li>
+      <li>online ludo download apk</li>
+      <li>online ludo download free</li>
+      <li>online ludo download for android</li>
+      <li>online ludo download for pc</li>
+      <li>online ludo dikhaiye</li>
+      <li>online ludo download karen</li>
+      <li>online ludo dice controller</li>
+      <li>download online ludo</li>
+      <li>yalla ludo diamond purchase online 400</li>
+      <li>yalla ludo diamond purchase online free</li>
+      <li>ludo dice online</li>
+      <li>wowzy ludo online game download</li>
+    </ul>
+  </div>
+
+  <div style="flex: 1; min-width: 300px; padding-left: 1rem;">
+    <h2>&nbsp;</h2>
+    <ul>
+      <li>play ludo online with friends without downloading</li>
+      <li>zupee ludo online cash game download</li>
+      <li>aqua ludo online download</li>
+      <li>rush play ludo game online download</li>
+      <li>online ludo earning</li>
+      <li>online ludo earning app real money</li>
+      <li>online ludo earning money</li>
+      <li>online ludo earning game</li>
+      <li>online ludo earning in pakistan</li>
+      <li>online ludo earning free</li>
+      <li>online ludo empire</li>
+      <li>online ludo earn money apk</li>
+      <li>online ludo earning app apk</li>
+      <li>earn money online ludo</li>
+      <li>earn money online ludo lush game</li>
+      <li>earning online ludo</li>
+      <li>ludo empire online</li>
+      <li>online earning ludo game</li>
+      <li>elite ludo online</li>
+      <li>online ludo game and earn money in pakistan</li>
+      <li>zupee enjoy ludo online games</li>
+      <li>how to earn money by playing ludo online</li>
+      <li>online ludo for pc</li>
+      <li>online ludo free game</li>
+      <li>online ludo for 2 players</li>
+      <li>online ludo free with friends</li>
+      <li>online ludo friends</li>
+      <li>online ludo for money</li>
+      <li>online ludo facebook</li>
+      <li>online ludo free cash</li>
+      <li>online ludo for 6 players</li>
+      <li>free online ludo</li>
+      <li>free online ludo king</li>
+      <li>free games online ludo</li>
+      <li>free online ludo with friends</li>
+      <li>free online ludo dice games</li>
+      <li>free online ludo 2 players</li>
+      <li>free online ludo without downloading</li>
+      <li>free online ludo game download</li>
+      <li>facebook online ludo game</li>
+      <li>free online ludo app</li>
+      <li>online ludo game download</li>
+      <li>online ludo game free</li>
+      <li>online ludo game paisa wala</li>
+      <li>online ludo goti</li>
+      <li>online ludo game cash withdrawal</li>
+      <li>online ludo games money</li>
+      <li>online ludo game paise wala</li>
+      <li>game online ludo</li>
+      <li>games online ludo star</li>
+      <li>games to play online ludo</li>
+      <li>gamezop online ludo</li>
+      <li>games online ludo club</li>
+      <li>google online ludo kaise khelte hain</li>
+      <li>google pay online ludo</li>
+      <li>paisa kamane wala game online ludo</li>
+      <li>money games online ludo</li>
+      <li>online ludo hero</li>
+      <li>online ludo hack mod apk</li>
+      <li>online ludo hero game</li>
+      <li>online ludo hack</li>
+      <li>online ludo hack app</li>
+      <li>online ludo how to play</li>
+      <li>online ludo haram</li>
+      <li>online ludo khelna hai</li>
+      <li>online ludo king hack apk</li>
+      <li>online ludo khelte hain</li>
+      <li>how to play online ludo</li>
+      <li>how to play online ludo game with friends</li>
+      <li>how to play online ludo with friends in facebook</li>
+      <li>how to earn money online ludo</li>
+      <li>hello ludo online ludo game</li>
+      <li>how to make online ludo game</li>
+      <li>how to win online ludo king</li>
+      <li>how to connect online ludo with friends</li>
+      <li>how to win online ludo</li>
+      <!-- Aur topics yahaan continue karna ho to "..." ke jagah par baaki list paste karen -->
+  
         </ul>
       </div>
     </section>
