--- a/online-ludo-game.html
+++ b/online-ludo-game.html
@@ -203,6 +203,7 @@
     <section class="related-topics">
       <h2>Related Topics</h2>
       <div class="keywords-grid">
+        <div class="left-column">
     <ul>
       <li>online ludo</li>
       <li>mencherz online ludo</li>
@@ -287,8 +288,8 @@
       <li>wowzy ludo online game download</li>
     </ul>
   </div>
-
   <div style="flex: 1; min-width: 300px; padding-left: 1rem;">
+     <div class="right-column">
     <h2>&nbsp;</h2>
     <ul>
       <li>play ludo online with friends without downloading</li>
