--- a/ludo-king-game.html
+++ b/ludo-king-game.html
@@ -235,7 +235,21 @@
       <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
+  
+<div class="container">
+    <p style="margin-bottom: 20px; font-size: 16px;">
+      Welcome to <strong>JokerLudo</strong> – your go-to platform to play the <strong>classic online Ludo game</strong> for free. This <strong>multiplayer ludo king</strong> game works instantly in your browser. Enjoy with <strong>friends or strangers</strong>, no login required!
+    </p>
 
+    <iframe src="https://gametion.itch.io/ludo-king" allowfullscreen title="Play Ludo King Online Game"></iframe>
+
+    <a href="index.html" class="back-btn">⬅️ Back to Home</a>
+
+    <p style="margin-top: 30px; font-size: 15px; color: #666;">
+      Tags: online ludo game | play ludo online | ludo game in browser | 2 player ludo game | ludo king with friends | free ludo multiplayer game | instant play ludo
+    </p>
+  
+  </div>
   <footer>
     <div class="footer-links">
       <a href="index.html">Home</a>
