--- a/ludo-king-game.html
+++ b/ludo-king-game.html
@@ -244,11 +244,14 @@
     <iframe src="https://gametion.itch.io/ludo-king" allowfullscreen title="Play Ludo King Online Game"></iframe>
 
     <a href="index.html" class="back-btn">⬅️ Back to Home</a>
-
+<h2>🧲 Long-Tail Keywords (Low-Medium Competition / Better Ranking)</h2>
     <p style="margin-top: 30px; font-size: 15px; color: #666;">
       Tags: online ludo game | play ludo online | ludo game in browser | 2 player ludo game | ludo king with friends | free ludo multiplayer game | instant play ludo
     </p>
   
+    <p style="margin-top: 30px; font-size: 15px; color: #666;">
+      Tags:ludo king multiplayer tricks | ludo earning app | real money ludo game | ludo group link whatsapp | ludo group for earning cash | ludo game on poki | ludo game on crazygames | ludo game on itch.io | html5 ludo game free | play ludo without downloading app
+
   </div>
   <footer>
     <div class="footer-links">
