--- a/ludo-king-game.html
+++ b/ludo-king-game.html
@@ -242,6 +242,55 @@
     </p>
 <h2>🧲 Long-Tail Keywords (Low-Medium Competition / Better Ranking)</h2>
     <p style="margin-top: 30px; font-size: 15px; color: #666;">
+        <h2>✅ Top High-Traffic SEO Keywords for Online Ludo Game</h2>
+
+  <p><strong>Tags:</strong> online ludo game | play ludo online | ludo game in browser | 2 player ludo game | ludo king with friends | free ludo multiplayer game | instant play ludo</p>
+
+  <h3>🎯 Primary Keywords (High Competition / High Volume)</h3>
+  <ul>
+    <li>online ludo game</li>
+    <li>play ludo online</li>
+    <li>ludo king online</li>
+    <li>ludo game online play</li>
+    <li>ludo game play now</li>
+    <li>ludo multiplayer online</li>
+    <li>free online multiplayer ludo games</li>
+    <li>ludo with friends online</li>
+    <li>ludo game play free</li>
+    <li>play ludo with friends online</li>
+    <li>ludo game online free</li>
+    <li>classic ludo online</li>
+    <li>ludo king game play</li>
+    <li>ludo king play online</li>
+  </ul>
+
+  <h3>🧲 Long-Tail Keywords (Low-Medium Competition / Better Ranking)</h3>
+  <ul>
+    <li>ludo game play online free with friends</li>
+    <li>how to play ludo online with friends</li>
+    <li>free ludo game without download</li>
+    <li>browser-based ludo game</li>
+    <li>ludo game no login required</li>
+    <li>2 player ludo game online</li>
+    <li>ludo king game play free online</li>
+    <li>online ludo game in browser</li>
+    <li>ludo game for website embedding</li>
+    <li>instant play ludo game</li>
+    <li>ludo game with voice chat</li>
+    <li>play ludo online on mobile browser</li>
+  </ul>
+
+  <h3>🔑 Related Intent Keywords</h3>
+  <ul>
+    <li>ludo king multiplayer tricks</li>
+    <li>ludo earning app</li>
+    <li>real money ludo game</li>
+    <li>ludo group link whatsapp</li>
+    <li>ludo group for earning cash</li>
+    <li>ludo game on poki / crazygames / itch.io</li>
+    <li>html5 ludo game free</li>
+    <li>play ludo without downloading app</li>
+  </ul>
       Tags: online ludo game | play ludo online | ludo game in browser | 2 player ludo game | ludo king with friends | free ludo multiplayer game | instant play ludo
     </p>
   
